fix icons position on mobile view

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ header {
   position: absolute;
   top: 245px;
   left: 70px;
-  width: 550px;
+  max-width: 550px;
   padding: 50px 40px;
   color: white;
   background-color: rgba(0, 0, 0, 0.45);
@@ -438,6 +438,7 @@ div.info {
   .section__header {
     top: 150px;
     left: 0;
+    max-width: 550px;
     background-color: transparent;
   }
 
@@ -451,6 +452,7 @@ div.info {
 
   .icons {
     margin: 0 auto;
+    right: 60px;
     bottom: 60px;
     width: 300px;
     height: 50px;
